--- a/DeviceHandler/DeviceHandler.csproj
+++ b/DeviceHandler/DeviceHandler.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\Communication\Communication.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Controls\Controls.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Converters\Converters.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Services\Services.csproj" />
     <ProjectReference Include="..\DeviceCommunicators\DeviceCommunicators.csproj" />
