--- a/DeviceSimulators/DeviceSimulators.csproj
+++ b/DeviceSimulators/DeviceSimulators.csproj
@@ -8,13 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Views\**" />
-    <EmbeddedResource Remove="Views\**" />
-    <None Remove="Views\**" />
-    <Page Remove="Views\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" PrivateAssets="All" />
@@ -24,6 +17,12 @@
     <ProjectReference Include="..\..\Infrastructure\Communication\Communication.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Entities\Entities.csproj" />
     <ProjectReference Include="..\DeviceHandler\DeviceHandler.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\DeviceSimulatorsView.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
