--- a/TestDevices/TestDevices.csproj
+++ b/TestDevices/TestDevices.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="MahApps.Metro" Version="2.4.10" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
+    <PackageReference Include="Microsoft.WindowsAPICodePack.Shell" Version="1.1.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
   </ItemGroup>
 
