--- a/DeviceCommunicators/DeviceCommunicators.csproj
+++ b/DeviceCommunicators/DeviceCommunicators.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\Communication\Communication.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\DBCFileParser\DBCFileParser.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Entities\Entities.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Services\Services.csproj" />
   </ItemGroup>
