Add reference to J2534DotNet

--- a/DeviceHandler/DeviceHandler.csproj
+++ b/DeviceHandler/DeviceHandler.csproj
@@ -34,6 +34,7 @@
     <ProjectReference Include="..\..\Infrastructure\Controls\Controls.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Converters\Converters.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Services\Services.csproj" />
+	<ProjectReference Include="..\..\Infrastructure\J2534DotNet\J2534DotNet.csproj" />
     <ProjectReference Include="..\DeviceCommunicators\DeviceCommunicators.csproj" />
   </ItemGroup>
 
