--- a/DeviceCommunicators/DeviceCommunicators.csproj
+++ b/DeviceCommunicators/DeviceCommunicators.csproj
@@ -5,6 +5,7 @@
     <Nullable>disable</Nullable>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x86</Platforms>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
