--- a/DeviceSimulators/DeviceSimulators.csproj
+++ b/DeviceSimulators/DeviceSimulators.csproj
@@ -8,6 +8,7 @@
 	<UseWindowsForms>true</UseWindowsForms>
     <Platforms>AnyCPU;x86</Platforms>
     <ApplicationIcon>Resources\Simulator.ico</ApplicationIcon>
+    <UserSecretsId>21257972-84a0-4e94-984d-a206180fda06</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" PrivateAssets="All" />
   </ItemGroup>
 
