--- a/DeviceSimulators/DeviceSimulators.csproj
+++ b/DeviceSimulators/DeviceSimulators.csproj
@@ -9,6 +9,7 @@
     <Platforms>AnyCPU;x86</Platforms>
     <ApplicationIcon>Resources\Simulator.ico</ApplicationIcon>
     <UserSecretsId>21257972-84a0-4e94-984d-a206180fda06</UserSecretsId>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,7 +26,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\Communication\Communication.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Entities\Entities.csproj" />
-	<ProjectReference Include="..\..\Infrastructure\J2534DotNet\J2534DotNet.csproj" />
     <ProjectReference Include="..\DeviceHandler\DeviceHandler.csproj" />
   </ItemGroup>
 
