--- a/DeviceSimulators/DeviceSimulators.csproj
+++ b/DeviceSimulators/DeviceSimulators.csproj
@@ -6,7 +6,7 @@
     <Nullable>disable</Nullable>
     <UseWPF>true</UseWPF>
 	<UseWindowsForms>true</UseWindowsForms>
-    <Platforms>AnyCPU;x86</Platforms>
+    <Platforms>AnyCPU;x86;x64</Platforms>
     <ApplicationIcon>Resources\Simulator.ico</ApplicationIcon>
     <UserSecretsId>21257972-84a0-4e94-984d-a206180fda06</UserSecretsId>
     <PlatformTarget>x64</PlatformTarget>
